--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
   <body>
     <!-- Шапка-->
 
-    <header class="page-header">
+    <!-- <header class="page-header">
       <div class="container">
         <nav class="nav">
           <a href="/" lang="en" class="logo link"
@@ -62,16 +62,16 @@
           </li>
         </ul>
       </div>
-    </header>
+    </header> -->
     <!--Герой-->
     <main>
       <section class="hero">
-        <div class="container">
+        <!-- <div class="container">
           <h1 class="hero-title">Эффективные решения для вашего бизнеса</h1>
           <button type="button" class="button-title" data-modal-open>
             Заказать услугу
           </button>
-        </div>
+        </div> -->
       </section>
       <!--Преимущества-->
       <section class="features">
@@ -130,7 +130,7 @@
         </div>
       </section>
       <!--о нас-->
-      <section class="about">
+      <!-- <section class="about">
         <div class="container">
           <h2 class="about-title">Чем мы занимаемся</h2>
           <ul class="pic-items">
@@ -163,7 +163,7 @@
             </li>
           </ul>
         </div>
-      </section>
+      </section> -->
       <!--Сотрудники-->
       <section class="employees">
         <div class="container">
@@ -340,6 +340,7 @@
           </ul>
         </div>
       </section>
+      -->
       <!--Клиенты-->
       <section class="clients">
         <div class="container">
