--- a/index.html
+++ b/index.html
@@ -66,12 +66,12 @@
     <!--Герой-->
     <main>
       <section class="hero">
-        <!-- <div class="container">
+        <div class="container">
           <h1 class="hero-title">Эффективные решения для вашего бизнеса</h1>
           <button type="button" class="button-title" data-modal-open>
             Заказать услугу
           </button>
-        </div> -->
+        </div>
       </section>
       <!--Преимущества-->
       <section class="features">
@@ -340,7 +340,6 @@
           </ul>
         </div>
       </section>
-      -->
       <!--Клиенты-->
       <section class="clients">
         <div class="container">
