--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
   <body>
     <!-- Шапка-->
 
-    <!-- <header class="page-header">
+    <header class="page-header">
       <div class="container">
         <nav class="nav">
           <a href="/" lang="en" class="logo link"
@@ -62,7 +62,7 @@
           </li>
         </ul>
       </div>
-    </header> -->
+    </header>
     <!--Герой-->
     <main>
       <section class="hero">
@@ -130,7 +130,7 @@
         </div>
       </section>
       <!--о нас-->
-      <!-- <section class="about">
+      <section class="about">
         <div class="container">
           <h2 class="about-title">Чем мы занимаемся</h2>
           <ul class="pic-items">
@@ -163,7 +163,7 @@
             </li>
           </ul>
         </div>
-      </section> -->
+      </section>
       <!--Сотрудники-->
       <section class="employees">
         <div class="container">
@@ -460,7 +460,7 @@
         </div>
         <div class="subscribe">
           <h2 class="subscribe__title">Подпишитесь на рассылку</h2>
-          <div class="form">
+          <div class="for450m">
             <input
               type="email"
               name="user-mail-footer"
