--- a/index.html
+++ b/index.html
@@ -460,7 +460,7 @@
         </div>
         <div class="subscribe">
           <h2 class="subscribe__title">Подпишитесь на рассылку</h2>
-          <div class="for450m">
+          <div class="form">
             <input
               type="email"
               name="user-mail-footer"
