--- a/portfolio.html
+++ b/portfolio.html
@@ -22,7 +22,7 @@
 
   <body>
     <!-- Шапка-->
-    <!-- <header class="page-header">
+    <header class="page-header">
       <div class="container">
         <nav class="nav">
           <a href="/" lang="en" class="logo link"
@@ -64,7 +64,7 @@
           </li>
         </ul>
       </div>
-    </header> -->
+    </header>
     <main>
       <section class="portfolio-section">
         <div class="container">
