--- a/portfolio.html
+++ b/portfolio.html
@@ -43,7 +43,7 @@
           </ul>
         </nav>
         <ul class="header-contacts">
-          <li class="mail-icon">
+          <li class="contacts-icon">
             <a
               href="mailto:info@devstudio.com"
               class="contact-list-header link"
@@ -54,7 +54,7 @@
               info@devstudio.com</a
             >
           </li>
-          <li>
+          <li class="contacts-icon">
             <a href="tel:+380961111111" class="contact-list-header link">
               <svg class="phone-header-icon" width="10" height="16">
                 <use href="./images/icons.svg#icon-smartphone"></use>
