--- a/index.html
+++ b/index.html
@@ -63,21 +63,24 @@
         </ul>
         <button type="button" class="menu-open-btn">o</button>
       </div>
-      <div class="mob-menu">
+      <div class="mob-menu is-hidden">
         <div class="container">
-        <button type="button" class="menu-close-btn">X</button>
-        <ul class="mob-menu-list">
-            <li class="mob-menu__item">
-              <a href="./index.html" class="mob-menu__link link current">Студия</a>
-            </li>
-            <li class="mob-menu__item">
-              <a href="./portfolio.html" class="mob-menu__link link">Портфолио</a>
-            </li>
-            <li class="mob-menu__item">
-              <a href="" class="mob-menu__link link">Контакты</a>
-            </li>
-          </ul>
+          <div class="mob-menu__top">
+            <button type="button" class="menu-close-btn">X</button>
+            <ul class="mob-menu-list">
+              <li class="mob-menu__item">
+                <a href="./index.html" class="mob-menu__link link current">Студия</a>
+              </li>
+              <li class="mob-menu__item">
+                <a href="./portfolio.html" class="mob-menu__link link">Портфолио</a>
+              </li>
+              <li class="mob-menu__item">
+                <a href="" class="mob-menu__link link">Контакты</a>
+              </li>
+            </ul>
+          </div>
         </nav>
+      <div class="mob-menu__communication">
         <ul class="mob-menu__contacts">
           <li class="mob-menu__connect">
             <a href="tel:+380961111111" class="mob-menu__call link">
@@ -113,6 +116,7 @@
             </li>
           </ul>
         </div>
+      </div>
         </div>
 
       </div>
@@ -634,5 +638,6 @@
       </div>
     </div>
     <script src="./js/modal.js"></script>
+    <script src="./js/menu.js"></script>
   </body>
 </html>
